--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "del-cli": "^6.0.0",
     "oxlint": "^1.7.0",
     "sass": "^1.89.2",
+    "semantic-release": "^24.2.7",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "maplibre-gl": "^5.6.1",
-    "maplibregl-grouped-layers-control": "file:maplibregl-grouped-layers-control-1.0.0.tgz"
+    "maplibre-gl": "^5.6.1"
   }
 }
